--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -189,7 +189,7 @@
         "name": "Tension minimale"
       },
       "batcur": {
-        "name": "Ampérage"
+        "name": "Intensité"
       },
       "pack_input_power": {
         "name": "Puissance de sortie de la batterie"
