--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -107,9 +107,11 @@
         "name": "Connection Status",
         "state": {
           "0": "Unknown",
-          "1": "Connected",
-          "2": "HEMS",
-          "3": "No groupe de fusibles"
+          "1": "Connected (Cloud)",
+          "2": "Connected (Local)",
+          "3": "Connected (zenSDK)",
+          "4": "HEMS",
+          "5": "No groupe de fusibles"
         }
       },
       "so_h": {
