--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -186,11 +186,8 @@
       "strength": {
         "name": "Wifi Signaalsterkte"
       },
-      "remain_out_time": {
-        "name": "Resterende Ontlaadtijd"
-      },
-      "remain_input_time": {
-        "name": "Resterende Laadtijd"
+      "remaining_time": {
+        "name": "Resterende Tijd"
       },
       "soft_version": {
         "name": "BMS Firmware"
