--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -115,8 +115,9 @@
         "name": "Connection Status",
         "state": {
           "0": "Unknown",
-          "1": "HEMS",
-          "2": "No FuseGroup",
+          "1": "Calibrating",
+          "2": "HEMS",
+          "3": "No FuseGroup",
           "10": "Connected cloud",
           "11": "Connected local",
           "12": "Connected (zenSDK)"
