--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -335,11 +335,11 @@
         }
       },
       "grid_reverse": {
-        "name": "Mode dérivation ( bypass )",
+        "name": "Exportation d'énergie",
         "state": {
-          "auto": "Automatique",
-          "off": "Toujours désactivé",
-          "on": "Toujours activé"
+          "disabled": "désactivé",
+          "allow": "Autorisé",
+          "forbidden": "Interdit"
         }
       }
     },
