--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -341,6 +341,14 @@
           "on": "Always-On"
         }
       },
+      "grid_off_mode": {
+        "name": "Off-Grid Mode",
+        "state": {
+          "normal": "Normal",
+          "eco": "Economic",
+          "off": "Off"
+        }
+      },
       "grid_reverse": {
         "name": "Energy Export",
         "state": {
