Update German translations for fuse group descriptions

--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -320,7 +320,8 @@
         "state": {
           "unused": "Nicht verwendet, Gerät hat keine Sicherungsgruppe",
           "owncircuit": "Gerät hat einen eigenen Stromkreis oder eine eigene Phase",
-          "group800": "Sicherungsgruppe max. 800 W",
+          "group800": "Sicherungsgruppe max. 800 W / 1200W laden",
+          "group800_2400": "Sicherungsgruppe max. 800 W / 2400W laden",
           "group1200": "Sicherungsgruppe max. 1200 W",
           "group2000": "Sicherungsgruppe max. 2000 W",
           "group2400": "Sicherungsgruppe max. 2400 W",
