Update FuseGroup descriptions in English translations

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -320,7 +320,8 @@
         "state": {
           "unused": "Unused, device has No FuseGroup",
           "owncircuit": "Device has its own circuit or phase",
-          "group800": "FuseGroup max. 800w",
+          "group800": "FuseGroup max. 800w / 1200w charge",
+          "group800_2400": "FuseGroup max. 800w / 2400w charge",
           "group1200": "FuseGroup max. 1200w",
           "group2000": "FuseGroup max. 2000w",
           "group2400": "FuseGroup max. 2400w",
