Enhance Dutch translation for fusegroup capacities
Updated the Dutch translation for device fusegroup states to include additional battery charging capacities.

--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -256,7 +256,8 @@
         "state": {
           "unused": "Niet gebruikt, apparaat heeft geen zekeringgroep",
           "owncircuit": "Apparaat is aangesloten op aparte groep of fase",
-          "group800": "Zekeringgroep max. 800w",
+          "group800": "Zekeringgroep max. 800w / 1200w batterijlading",
+          "group800_2400": "Zekeringgroep max. 800w / 2400w batterijlading",
           "group1200": "Zekeringgroep max. 1200w",
           "group2000": "Zekeringgroep max. 2000w",
           "group2400": "Zekeringgroep max. 2400w",
