--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -303,6 +303,13 @@
           "output": "Mode sortie AC"
         }
       },
+      "dc_switch": {
+        "name": "Port CC",
+        "state": {
+          "on": "Arrêt/Entrée",
+          "off": "Marche/Sortie"
+        }
+      },
       "hems_state": {
         "name": "État HEMS",
         "state": {
@@ -383,6 +390,9 @@
     "switch": {
       "lamp_switch": {
         "name": "LED"
+      },
+      "ac_switch": {
+        "name": "prise secteur"
       },
       "buzzer_switch": {
         "name": "Buzzer"
