--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -313,8 +313,8 @@
       "dc_switch": {
         "name": "DC Anschluss",
         "state": {
-          "on": "An/Eingang",
-          "off": "Aus/Ausgang"
+          "on": "An/Ausgang",
+          "off": "Aus/Eingang"
         }
       },
       "hems_state": {
