Update DC port state labels in translations

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -313,8 +313,8 @@
       "dc_switch": {
         "name": "DC port",
         "state": {
-          "on": "On/Input",
-          "off": "Off/Output"
+          "on": "On/Output",
+          "off": "Off/Input"
         }
       },
       "hems_state": {
