Update French translations for dc_switch states

--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -306,8 +306,8 @@
       "dc_switch": {
         "name": "Port CC",
         "state": {
-          "on": "Arrêt/Entrée",
-          "off": "Marche/Sortie"
+          "on": "Arrêt/Sortie",
+          "off": "Marche/Entrée"
         }
       },
       "hems_state": {
