Update Dutch translations for dc_switch states

--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -250,8 +250,8 @@
       "dc_switch": {
         "name": "DC-poort",
         "state": {
-          "on": "Aan/Invoer",
-          "off": "Uit/Uitgang"
+          "on": "Aan/Uitgang",
+          "off": "Uit/Invoer"
         }
       },
       "hems_state": {
