Add translations for plug and DC switch states

--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -123,6 +123,13 @@
       "grid_off_power": {
         "name": "Offgrid-Ausgangsleistung"
       },
+      "plug_state": {
+        "name": "netzunabhängige Steckdose",
+        "state": {
+          "0": "nicht vorhanden",
+          "1": "angeschlossen"
+        }
+      },
       "connection_status": {
         "name": "Verbindungsstatus",
         "state": {
@@ -310,6 +317,13 @@
           "output": "AC-Ausgangsmodus"
         }
       },
+      "dc_switch": {
+        "name": "DC Anschluss",
+        "state": {
+          "on": "An/Ausgang",
+          "off": "Aus/Eingang"
+        }
+      },
       "hems_state": {
         "name": "HEMS-Status",
         "state": {
@@ -390,6 +404,9 @@
     "switch": {
       "lamp_switch": {
         "name": "LED"
+      },
+      "ac_switch": {
+        "name": "AC Anschluss"
       },
       "buzzer_switch": {
         "name": "Bestätigungston"
