--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -123,6 +123,13 @@
       "grid_off_power": {
         "name": "Offgrid output power"
       },
+      "plug_state": {
+        "name": "Off-Grid Power Strip",
+        "state": {
+          "0": "not available",
+          "1": "connected"
+        }
+      },
       "connection_status": {
         "name": "Connection Status",
         "state": {
@@ -310,6 +317,13 @@
           "output": "AC Output Mode"
         }
       },
+      "dc_switch": {
+        "name": "DC port",
+        "state": {
+          "on": "On/Output",
+          "off": "Off/Input"
+        }
+      },
       "hems_state": {
         "name": "HEMS State",
         "state": {
@@ -390,6 +404,9 @@
     "switch": {
       "lamp_switch": {
         "name": "LED"
+      },
+      "ac_switch": {
+        "name": "AC outlet"
       },
       "buzzer_switch": {
         "name": "Buzzer"
